[        ] mkalkbrenner: support multiple environments and search pages
[        ] mkalkbrenner: multilingual spellcheck
[        ] mkalkbrenner: multilingual search result highlighting
[        ] mkalkbrenner: support title module
[#1954302] mkalkbrenner: Isolate some re-usable code from apachesolr_index_entity_to_documents().
[        ] mkalkbrenner: fixed endless recursion caused by #1954302


Apache Solr Multilingual 7.x-1.0-alpha2, 2012-09-18
---------------------------------------------------
[        ] mkalkbrenner: added config buttons to module page
[        ] mkalkbrenner: fixed switch for 'detach_auto_language_filter' depending on language facet
[        ] mkalkbrenner: added basic test case
[#1759004] mkalkbrenner: removed variable apachesolr_search_protected_query_parameters
[#1787668] bart.hanssens, mkalkbrenner: Warning: array_key_exists() in apachesolr_multilingual_confgen.module


Apache Solr Multilingual 7.x-1.0-alpha1, 2012-09-03
---------------------------------------------------
[        ] mkalkbrenner: declared querypath dependency
[#1185196] pfrenssen, andymantell: Call to undefined function apachesolr_default_server()
[        ] mkalkbrenner: new schema generator based on querypath
[#931950] mkalkbrenner: moved gerneric part of config file generation in a separate module called apachesolr_confgen and introduced alter hooks
[        ] mkalkbrenner: ported configuration otions from Apache Solr Multilingual 6.x-2.0-beta2
[        ] mkalkbrenner: moved advanced solr settings to Apache Solr Config Generator module
[        ] mkalkbrenner: fixed package
[#1721946] xurubo93: Error in apachesolr_multilingual_form_apachesolr_search_bias_form_alter
[        ] mkalkbrenner: moved textfile settings to Apache Solr Config Generator module
[#1271680] jessehs, mkalkbrenner: Make occurance of language-neutral nodes in search result configurable
[        ] mkalkbrenner, cspitzlay: complete rewrite!


Apache Solr Multilingual 7.x-1.0-alpha0, never released